[package]
name = "bimef"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ndarray = "0.15"
ndarray-linalg = { version = "0.14", features = ["openblas-system"] }
png = "0.17"
structopt = "0.3"
